--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,16 +6,15 @@ body {
 h1 {
   color: rgb(151, 151, 151);
   margin-bottom: 0;
-  margin-top: 50px;
   text-align: center;
   font-size: 40px;
 }
 
 .frame {
   height: 450px;
-  width: 50%;
+  width: 40%;
   margin-top: 20px;
-  margin-left: 330px;
+  margin-left: 29%;
   border: 2px solid rgba(68, 68, 68, 0.18);
   border-radius: 7px;
   box-shadow: 0px 3px 20px 4px rgba(0, 0, 0, 0.18);
@@ -37,10 +36,10 @@ h1 {
 }
 
 #userInput {
-  padding: 5px;
-  margin-left: 330px;
+  padding: 10px;
+  margin-left: 375px;
   margin-right: auto;
-  width: 53%;
+  width: 43%;
 }
 
 #textInput {
@@ -50,15 +49,17 @@ h1 {
   font-size: 17px;
   border-radius: 3px;
   box-shadow: 0px 3px 20px 4px rgba(0, 0, 0, 0.18);
-  color: #ef5350;
+  color: #ffffff;
+  background-color: #414141;
+  border-color: #414141;
 }
 
 #buttonInput {
   padding: 1px 20px;
   font-family: "Segoe UI";
   font-size: 17px;
-  background-color: #ef5350;
-  border-color: #ef5350;
+  background-color: #50ef9f;
+  border-color: #50ef9f;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -66,13 +67,13 @@ h1 {
 .userText {
   color: white;
   font-family: "Segoe UI";
-  font-size: 17px;
+  font-size: 13px;
   text-align: left;
   line-height: 30px;
 }
 
 .userText span {
-  background-color: #ef5350;
+  background-color: #50ef9f;
   padding: 7px;
   border-radius: 5px;
 }
@@ -80,7 +81,7 @@ h1 {
 .botText {
   color: white;
   font-family: "Segoe UI";
-  font-size: 17px;
+  font-size: 13px;
   text-align: right;
   line-height: 30px;
 }
