--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
       type="text/css"
       href="{{ url_for('static',filename='styles/style.css') }}"
     />
+    <!-- <link rel="stylesheet" href="../static/styles/style.css"> -->
   </head>
 
   <body>
